--- a/01-himnos-nacionales.html
+++ b/01-himnos-nacionales.html
@@ -244,7 +244,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box-container" data-src="canciones/">
             <!-- <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -256,7 +256,7 @@
             </div> -->
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box-container" data-src="canciones/">
             <!-- <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
