--- a/index_new.html
+++ b/index_new.html
@@ -63,7 +63,7 @@
         </div>
         <div class="box" data-src="index.html">
             <div class="image">
-                <a href="03-himnos-de-escuelas.html">
+                <a href="03-himnos-escuelas.html">
                     <div class="play">
                         <i class="fa fa-music"></i>
                     </div>
