SE ACTUALIZA PÁGINA ESPECIALIDADES

--- a/06-himnos-especialidades.html
+++ b/06-himnos-especialidades.html
@@ -34,17 +34,17 @@
                 <li><a href="https://ethosnaval.cl/bandera-de-senales/">BANDERAS Y SEÑALES</a></li>
             </ul>
         </div>
-        <h1 class="heading2">05 - HIMNOS DE UNIDADES Y REPARTICIONES</h1>
+        <h1 class="heading2">06 - HIMNOS DE ESPECIALIDADES</h1>
         <div class="box-container">
             <div class="box" data-src="canciones/">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/esmeralda.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/som_armada.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>01 - HIMNO DEL BUQUE ESCUELA "ESMERALDA"</h3>
+                    <h3>01 - HIMNO DEL SUBOFICIAL MAYOR DE LA ARMADA</h3>
                 </div>
             </div>
 
@@ -53,10 +53,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/cochrane.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_maniobras.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>02 - HIMNO DE LA FRAGATA "COCHRANE"</h3>
+                    <h3>02 - HIMNO DE ESPECIALIDAD DE MANIOBRAS</h3>
                 </div>
             </div>
 
@@ -65,10 +65,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/almirante_riveros.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_abastecimientos2.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>03 - HIMNO DE LA FRAGATA ALMIRANTE RIVEROS</h3>
+                    <h3>03 - HIMNO DE ESPECIALIDAD DE ABASTECIMIENTO</h3>
                 </div>
             </div>
         </div>
@@ -80,10 +80,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/carrera.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_artilleria_naval.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>04 - HIMNO DEL SUBMARINO CARRERA</h3>
+                    <h3>04 - HIMNO DE LA ESPECIALIDAD DE ARTILERÍA NAVAL</h3>
                 </div>
             </div>
 
@@ -92,10 +92,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/ohiggins.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_torpedista.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>05 - HIMNO DEL SUBMARINO O´HIGGINS</h3>
+                    <h3>05 - HIMNO DEL TORPEDISTA</h3>
                 </div>
             </div>
             <div class="box" data-src="">
@@ -103,10 +103,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/simpson.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_telecomunicaciones.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>06 - HIMNO DEL SUBMARINO SIMPSON</h3>
+                    <h3>06 - HIMNO DE LA ESPECIALIDAD DE TELECOMUNICACIONES NAVALES Y MARITIMAS</h3>
                 </div>
             </div>
         </div>
@@ -118,10 +118,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/miller.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_faros.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>07 - HIMNO DEL BATALLÓN "MILLER"</h3>
+                    <h3>07 - HIMNO DE LA ESPECIALIDAD DE FAROS</h3>
                 </div>
             </div>
 
@@ -130,10 +130,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/aldea.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_inteligencia.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>08 - HIMNO DEL BATALLÓN "ALDEA"</h3>
+                    <h3>08 - HIMNO DE LA ESPECIALIDAD DE INTELIGENCIA NAVAL</h3>
                 </div>
             </div>
             <div class="box" data-src="">
@@ -141,10 +141,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/lynch.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_litoral.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>09 - HIMNO DEL DESTACAMENTO IM N°1 LYNCH</h3>
+                    <h3>09 - HIMNO DE LA ESPECIALIDAD DE LITORAL</h3>
                 </div>
             </div>
         </div>
@@ -156,10 +156,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/im_cochrane.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_sanidad_naval.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>10 - HIMNO DEL DESTACAMENTO IM N°4 COCHRANE</h3>
+                    <h3>10 - HIMNO DE LA ESPECIALIDAD DE SANIDAD NAVAL</h3>
                 </div>
             </div>
 
@@ -168,10 +168,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/cuerpo_im.png" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_sanidad_dental.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>11 - HIMNO DEL CENTRO DE ENTRENAMIENTO BÁSICO CUERPO DE INFANTERÍA DE MARINA</h3>
+                    <h3>11 - HIMNO DE LA ESPECIALIDAD SANIDAD DENTAL</h3>
                 </div>
             </div>
             <div class="box" data-src="">
@@ -179,10 +179,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/cenir.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_buzos_tacticos.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>12 - HIMNO DEL CENTRO NAVAL DE INSTRUCCIÓN DE RECLUTAS</h3>
+                    <h3>12 - HIMNO DE LOS BUZOS TÁCTICOS</h3>
                 </div>
             </div>
         </div>
@@ -194,10 +194,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/base_submarinos.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_comandos_im.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>13 - HIMNO DE LA BASE DE SUBMARINOS</h3>
+                    <h3>13 - HIMNO DE LOS COMANDOS INFANTES DE MARINA</h3>
                 </div>
             </div>
 
@@ -206,10 +206,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/base_antartica.jpg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_reservista.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>14 - HIMNO DE LA BASE NAVAL ANTÁRTICA "ARTURO PRAT"</h3>
+                    <h3>14 - HIMNO DEL RESERVISTA</h3>
                 </div>
             </div>
             <div class="box" data-src="">
@@ -217,52 +217,14 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/guarnicion_im.jpeg" alt="">
+                    <img src="images/06-IMG-HIMNOS-ESPECIALIDADES/esp_conductor.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>15 - HIMNO DE LA GUARNICIÓN IM ORDEN Y SEGURIDAD (IQUIQUE)</h3>
+                    <h3>15 - HIMNO DEL CONDUCTOR NAVAL</h3>
                 </div>
             </div>
         </div>
         <!-- FIN 5TA FILA-->
-         <!--5TA FILA-->
-        <div class="box-container">
-            <div class="box" data-src="canciones/">
-                <div class="image">
-                    <div class="play">
-                        <i class="fas fa-play"></i>
-                    </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/centro_abastecimiento.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h3>16 - HIMNO DEL CENTRO DE ABASTECIMIENTO</h3>
-                </div>
-            </div>
-
-            <div class="box-container" data-src="canciones/">
-                <!-- <div class="image">
-                    <div class="play">
-                        <i class="fas fa-play"></i>
-                    </div>
-                    <img src="images/03-IMG-HIMNOS-ESCUELAS/ohiggins.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h3></h3>
-                </div> -->
-            </div>
-            <div class="box-container" data-src="">
-                <!-- <div class="image">
-                    <div class="play">
-                        <i class="fas fa-play"></i>
-                    </div>
-                    <img src="images/03-IMG-HIMNOS-ESCUELAS/simpson.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h3>15 - HIMNO DE LA GUARNICIÓN IM ORDEN Y SEGURIDAD (IQUIQUE)</h3>
-                </div> -->
-            </div>
-        </div>
-        <!-- FIN 6TA FILA-->
 
     </div>
     </div>
