--- a/07-marchas-canciones.html
+++ b/07-marchas-canciones.html
@@ -34,17 +34,17 @@
                 <li><a href="https://ethosnaval.cl/bandera-de-senales/">BANDERAS Y SEÑALES</a></li>
             </ul>
         </div>
-        <h1 class="heading2">05 - HIMNOS DE UNIDADES Y REPARTICIONES</h1>
+        <h1 class="heading2">07 - MARCHAS - CANCIONES</h1>
         <div class="box-container">
             <div class="box" data-src="canciones/">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/esmeralda.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>01 - HIMNO DEL BUQUE ESCUELA "ESMERALDA"</h3>
+                    <h3>01 - ADIOS AL 7° DE LÍNEA</h3>
                 </div>
             </div>
 
@@ -53,10 +53,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/cochrane.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>02 - HIMNO DE LA FRAGATA "COCHRANE"</h3>
+                    <h3>02 - BATERÍA 280</h3>
                 </div>
             </div>
 
@@ -65,10 +65,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/almirante_riveros.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>03 - HIMNO DE LA FRAGATA ALMIRANTE RIVEROS</h3>
+                    <h3>03 - BRAVOS SOLDADOS DEL MAR</h3>
                 </div>
             </div>
         </div>
@@ -80,10 +80,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/carrera.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>04 - HIMNO DEL SUBMARINO CARRERA</h3>
+                    <h3>04 - CANCIÓN DE YUNGAY</h3>
                 </div>
             </div>
 
@@ -92,10 +92,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/ohiggins.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>05 - HIMNO DEL SUBMARINO O´HIGGINS</h3>
+                    <h3>05 - CORAZONES DE ROBLE</h3>
                 </div>
             </div>
             <div class="box" data-src="">
@@ -103,10 +103,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/simpson.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>06 - HIMNO DEL SUBMARINO SIMPSON</h3>
+                    <h3>06 - GLORIA Y VICTORIA</h3>
                 </div>
             </div>
         </div>
@@ -118,10 +118,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/miller.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>07 - HIMNO DEL BATALLÓN "MILLER"</h3>
+                    <h3>07 - HONORES A LOS CAÍDOS</h3>
                 </div>
             </div>
 
@@ -130,10 +130,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/aldea.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>08 - HIMNO DEL BATALLÓN "ALDEA"</h3>
+                    <h3>08 - HIMNO BICENTENARIO DE LA ARMADA DE CHILE</h3>
                 </div>
             </div>
             <div class="box" data-src="">
@@ -141,10 +141,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/lynch.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>09 - HIMNO DEL DESTACAMENTO IM N°1 LYNCH</h3>
+                    <h3>09 - HIMNO DE LA INFANERÍA DEL EJÉRCITO CHILENO</h3>
                 </div>
             </div>
         </div>
@@ -156,10 +156,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/im_cochrane.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>10 - HIMNO DEL DESTACAMENTO IM N°4 COCHRANE</h3>
+                    <h3>10 - HIMNO DE LA SECCIÓN</h3>
                 </div>
             </div>
 
@@ -168,10 +168,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/cuerpo_im.png" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>11 - HIMNO DEL CENTRO DE ENTRENAMIENTO BÁSICO CUERPO DE INFANTERÍA DE MARINA</h3>
+                    <h3>11 - LILI MARLEEN</h3>
                 </div>
             </div>
             <div class="box" data-src="">
@@ -179,10 +179,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/cenir.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>12 - HIMNO DEL CENTRO NAVAL DE INSTRUCCIÓN DE RECLUTAS</h3>
+                    <h3>12 - LOS QUE NUNCA VOLVERÁN</h3>
                 </div>
             </div>
         </div>
@@ -194,10 +194,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/base_submarinos.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>13 - HIMNO DE LA BASE DE SUBMARINOS</h3>
+                    <h3>13 - MI FUSIL Y YO</h3>
                 </div>
             </div>
 
@@ -206,10 +206,10 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/base_antartica.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>14 - HIMNO DE LA BASE NAVAL ANTÁRTICA "ARTURO PRAT"</h3>
+                    <h3>14 - NAVAL</h3>
                 </div>
             </div>
             <div class="box" data-src="">
@@ -217,52 +217,90 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/guarnicion_im.jpeg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>15 - HIMNO DE LA GUARNICIÓN IM ORDEN Y SEGURIDAD (IQUIQUE)</h3>
+                    <h3>15 - PANZERLIED</h3>
                 </div>
             </div>
         </div>
         <!-- FIN 5TA FILA-->
-         <!--5TA FILA-->
+        <!--6TA FILA-->
         <div class="box-container">
             <div class="box" data-src="canciones/">
                 <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/05-IMG-HIMNOS-UNIDADES-REPARTICIONES/centro_abastecimiento.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>16 - HIMNO DEL CENTRO DE ABASTECIMIENTO</h3>
+                    <h3>16 - SOLDADOS DE MAR</h3>
                 </div>
             </div>
 
-            <div class="box-container" data-src="canciones/">
-                <!-- <div class="image">
+            <div class="box" data-src="canciones/">
+                <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/03-IMG-HIMNOS-ESCUELAS/ohiggins.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3></h3>
-                </div> -->
+                    <h3>17 - TAMBORES Y CLARINES</h3>
+                </div>
+            </div>
+            <div class="box" data-src="">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
+                </div>
+                <div class="content">
+                    <h3>18 - TORREONES DE ORO</h3>
+                </div>
+            </div>
+        </div>
+        <!-- FIN 6TA FILA-->
+         <!--7TA FILA-->
+        <div class="box-container">
+            <div class="box" data-src="canciones/">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
+                </div>
+                <div class="content">
+                    <h3>19 - YA MARCHA LA INFANTERÍA</h3>
+                </div>
+            </div>
+
+            <div class="box" data-src="canciones/">
+                <div class="image">
+                    <div class="play">
+                        <i class="fas fa-play"></i>
+                    </div>
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
+                </div>
+                <div class="content">
+                    <h3>20 - YO TENÍA UN CAMARADA</h3>
+                </div>
             </div>
             <div class="box-container" data-src="">
                 <!-- <div class="image">
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/03-IMG-HIMNOS-ESCUELAS/simpson.jpg" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
                 </div>
                 <div class="content">
-                    <h3>15 - HIMNO DE LA GUARNICIÓN IM ORDEN Y SEGURIDAD (IQUIQUE)</h3>
+                    <h3>TORREONES DE ORO</h3>
                 </div> -->
             </div>
         </div>
-        <!-- FIN 6TA FILA-->
+        <!-- FIN 7TA FILA-->
 
     </div>
     </div>
