SE ACTUALIZA NOMBRE INDEX

--- a/01-himnos-nacionales.html
+++ b/01-himnos-nacionales.html
@@ -34,7 +34,7 @@
       </div>
       <h1 class="heading2">01 - HIMNOS NACIONALES</h1>
     <div class="box-container">
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones\01-SOUND-HIMNOS-NACIONALES\chile_coro.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones\01-SOUND-HIMNOS-NACIONALES\argentina_coro.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="ccanciones/">
+        <div class="box" data-src="canciones\01-SOUND-HIMNOS-NACIONALES\brasil_banda.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -154,6 +154,17 @@
     <!--FIN 3ERA FILA-->
     <!--4TA FILA-->
     <div class="box-container">
+        <div class="box" data-src="canciones\01-SOUND-HIMNOS-NACIONALES\francia.mp3">
+            <div class="image">
+                <div class="play">
+                    <i class="fas fa-play"></i>
+                </div>
+                <img src="images/01-IMG-HIMNOS-NACIONALES/francia.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>10 - HIMNO NACIONAL DE FRANCIA</h3>
+            </div>
+        </div>
         <div class="box" data-src="canciones/">
             <div class="image">
                 <div class="play">
@@ -162,7 +173,7 @@
                 <img src="images/01-IMG-HIMNOS-NACIONALES/japon.jpg" alt="">
             </div>
             <div class="content">
-                <h3>10 - HIMNO NACIONAL DE JAPÓN</h3>
+                <h3>11 - HIMNO NACIONAL DE JAPÓN</h3>
             </div>
         </div>
 
@@ -174,10 +185,13 @@
                 <img src="images/01-IMG-HIMNOS-NACIONALES/panama.jpg" alt="">
             </div>
             <div class="content">
-                <h3>11 - HIMNO NACIONAL DE LA REPÚBLICA DE PANAMÁ</h3>
+                <h3>12 - HIMNO NACIONAL DE LA REPÚBLICA DE PANAMÁ</h3>
             </div>
         </div>
-
+    </div>
+    <!--FIN 4TA FILA-->  
+    <!--5TA FILA-->
+    <div class="box-container">
         <div class="box" data-src="ccanciones/">
             <div class="image">
                 <div class="play">
@@ -186,13 +200,9 @@
                 <img src="images/01-IMG-HIMNOS-NACIONALES/mexico.jpg" alt="">
             </div>
             <div class="content">
-                <h3>12 - HIMNO NACIONAL DE MÉXICO</h3>
+                <h3>13 - HIMNO NACIONAL DE MÉXICO</h3>
             </div>
         </div>
-    </div>
-    <!--FIN 4TA FILA-->  
-    <!--5TA FILA-->
-    <div class="box-container">
         <div class="box" data-src="canciones/">
             <div class="image">
                 <div class="play">
@@ -201,7 +211,7 @@
                 <img src="images/01-IMG-HIMNOS-NACIONALES/peru.jpg" alt="">
             </div>
             <div class="content">
-                <h3>13 - HIMNO NACIONAL DE PERU</h3>
+                <h3>14 - HIMNO NACIONAL DE PERU</h3>
             </div>
         </div>
 
@@ -213,11 +223,16 @@
                 <img src="images/01-IMG-HIMNOS-NACIONALES/reino_unido.jpg" alt="">
             </div>
             <div class="content">
-                <h3>14 - HIMNO NACIONAL DEL REINO UNIDO</h3>
+                <h3>15 - HIMNO NACIONAL DEL REINO UNIDO</h3>
             </div>
         </div>
 
-        <div class="box" data-src="ccanciones/">
+        
+    </div>
+    <!--FIN 5TA FILA-->
+    <!--6TA FILA-->
+    <div class="box-container">
+        <div class="box" data-src="canciones/01-SOUND-HIMNOS-NACIONALES/uruguay.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -225,13 +240,9 @@
                 <img src="images/01-IMG-HIMNOS-NACIONALES/uruguay.jpg" alt="">
             </div>
             <div class="content">
-                <h3>15 - HIMNO NACIONAL DE LA REPÚBLICA ORIENTAL DEL URUGUAY</h3>
+                <h3>16 - HIMNO NACIONAL DE LA REPÚBLICA ORIENTAL DEL URUGUAY</h3>
             </div>
         </div>
-    </div>
-    <!--FIN 5TA FILA-->
-    <!--6TA FILA-->
-    <div class="box-container">
         <div class="box" data-src="canciones/">
             <div class="image">
                 <div class="play">
@@ -240,7 +251,7 @@
                 <img src="images/01-IMG-HIMNOS-NACIONALES/sudafrica.jpg" alt="">
             </div>
             <div class="content">
-                <h3>13 - HIMNO NACIONAL DE LA REPÚBLICA  DE SUDÁFRICA</h3>
+                <h3>17 - HIMNO NACIONAL DE LA REPÚBLICA  DE SUDÁFRICA</h3>
             </div>
         </div>
 
@@ -250,18 +261,6 @@
                     <i class="fas fa-play"></i>
                 </div>
                 <img src="images/01-IMG-HIMNOS-NACIONALES/reino_unido.jpg" alt="">
-            </div>
-            <div class="content">
-                <h3></h3>
-            </div> -->
-        </div>
-
-        <div class="box-container" data-src="canciones/">
-            <!-- <div class="image">
-                <div class="play">
-                    <i class="fas fa-play"></i>
-                </div>
-                <img src="images/01-IMG-HIMNOS-NACIONALES/.jpg" alt="">
             </div>
             <div class="content">
                 <h3></h3>
