--- a/07-marchas-canciones.html
+++ b/07-marchas-canciones.html
@@ -220,7 +220,7 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/naval.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>14 - NAVAL</h3>
@@ -236,7 +236,7 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/panzerlied.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>15 - PANZERLIED</h3>
@@ -247,7 +247,7 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/soldado_mar.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>16 - SOLDADOS DE MAR</h3>
@@ -259,7 +259,7 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/tambores.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>17 - TAMBORES Y CLARINES</h3>
@@ -275,7 +275,7 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/torreones_oro.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>18 - TORREONES DE ORO</h3>
@@ -286,7 +286,7 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/yamarcha_infanteria.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>19 - YA MARCHA LA INFANTERÍA</h3>
@@ -298,7 +298,7 @@
                     <div class="play">
                         <i class="fas fa-play"></i>
                     </div>
-                    <img src="images/07-IMG-MARCHAS-CANCIONES/" alt="">
+                    <img src="images/07-IMG-MARCHAS-CANCIONES/camarada.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>20 - YO TENÍA UN CAMARADA</h3>
