SE ACTUALIZA NOMBRE INDEX

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
         <div class="box" data-src="index.html">
             <div class="image">
-                <a href="08-cantos-marineros-tradicionales.html">
+                <a href="#">
                 <div class="play">
                     <i class="fa fa-music"></i>
                 </div>
