SE ACTUALIZA CANCIONES DE HIMNOS INSTITUCIONALES

--- a/02-himnos-institucionales.html
+++ b/02-himnos-institucionales.html
@@ -34,7 +34,7 @@
       </div>
       <h1 class="heading2">02 - HIMNOS INSTITUCIONALES</h1>
     <div class="box-container">
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones/02-SOUND-HIMNOS-INSTITUCIONALES/ejercito.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones/02-SOUND-HIMNOS-INSTITUCIONALES/armada.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones/02-SOUND-HIMNOS-INSTITUCIONALES/fuerza_aerea.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -73,7 +73,7 @@
     <!--FIN 1ERA FILA--> 
     <!--2DA FILA--> 
     <div class="box-container">
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones/02-SOUND-HIMNOS-INSTITUCIONALES/carabineros.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -85,7 +85,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones/02-SOUND-HIMNOS-INSTITUCIONALES/pdi.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
