--- a/03-himnos-escuelas.html
+++ b/03-himnos-escuelas.html
@@ -34,7 +34,7 @@
       </div>
       <h1 class="heading2">03 - HIMNOS DE ESCUELAS</h1>
     <div class="box-container">
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones\03-SOUND-HIMNOS-ESCUELAS\escuela_militar.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones\03-SOUND-HIMNOS-ESCUELAS\escuela-naval.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones\03-SOUND-HIMNOS-ESCUELAS\escuela_grumetes.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -73,7 +73,7 @@
     <!--FIN 1ERA FILA--> 
     <!--2DA FILA--> 
     <div class="box-container">
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones\03-SOUND-HIMNOS-ESCUELAS\escuela-fuerza-aerea.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -85,7 +85,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones\03-SOUND-HIMNOS-ESCUELAS\escuela-carabineros.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -97,7 +97,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones\03-SOUND-HIMNOS-ESCUELAS\escuela-pdi.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -124,7 +124,7 @@
             </div>
         </div>
 
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones\03-SOUND-HIMNOS-ESCUELAS\escuela_ingeneria.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
@@ -151,7 +151,7 @@
     <!-- FIN 3ERA FILA--> 
     <!--4TA FILA--> 
     <div class="box-container">
-        <div class="box" data-src="canciones/">
+        <div class="box" data-src="canciones\03-SOUND-HIMNOS-ESCUELAS\escuela_im.mp3">
             <div class="image">
                 <div class="play">
                     <i class="fas fa-play"></i>
