ACTUALIZACION MENU Y VINCULOS DEL MENU

--- a/08-cantos-populares-tradicionales.html
+++ b/08-cantos-populares-tradicionales.html
@@ -55,7 +55,7 @@
                 <i class="fa fa-bars fa-lg"></i>
             </a>
         </div>
-        <h1 class="heading2">07 - MARCHAS - CANCIONES</h1>
+        <h1 class="heading2">08 - CANTOS POPULARES MARINEROS Y TRADICIONALES</h1>
         <div class="box-container">
             <div class="box" data-src="canciones/">
                 <div class="image">
